@@ -14,6 +14,7 @@ lib/WTSI/DNAP/Warehouse/Schema/Result/CgapSupplierBarcode.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/FlgenPlate.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/IseqFlowcell.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/IseqProductMetric.pm
+lib/WTSI/DNAP/Warehouse/Schema/Result/IseqHeronProductMetric.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/IseqExternalProductMetric.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/IseqExternalProductComponent.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/IseqProductComponent.pm
