@@ -3,7 +3,8 @@ LIST OF CHANGES
 
  - ml warehouse LIMS drivers - define additional delegated
    to sample objects methods 
-
+ - DBIx class for a new iseq_heron_product_metrics table
+ 
 release 6.8.0
  - capture latest changes/additions in ml warehouse database
 
